--- a/app/src/main/res/layout/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout/activity_add_game_select_players.xml
@@ -5,13 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -104,27 +97,28 @@
                 android:text="@string/Date"
                 android:textSize="24sp" />
 
-            <Button
-                android:id="@+id/btnCancel"
-                style="@style/buttonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btnCancel"
-                android:layout_alignBaseline="@+id/btnSave"
-                android:layout_alignBottom="@+id/btnSave"
-                android:layout_toLeftOf="@+id/datePicker"
-                android:layout_toStartOf="@+id/datePicker" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
-            <Button
-                android:id="@+id/btnSave"
-                style="@style/buttonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/table_PlayersHeader"
-                android:layout_marginLeft="250dp"
-                android:layout_marginTop="170dp"
-                android:text="@string/btnContinue" />
+                <Button
+                    android:id="@+id/btnCancel"
+                    style="@style/buttonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/btnCancel" />
 
+                <Button
+                    android:id="@+id/btnSave"
+                    style="@style/buttonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/btnContinue" />
+            </LinearLayout>
         </RelativeLayout>
-    </ScrollView>
-</LinearLayout>
+    </LinearLayout>
