--- a/app/src/main/res/layout/tab_team.xml
+++ b/app/src/main/res/layout/tab_team.xml
@@ -44,7 +44,7 @@
         <TableLayout
             android:id="@+id/tableAllPlayers1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </TableLayout>
     </ScrollView>
