--- a/app/src/main/res/layout/fragment_add_game_enter_data.xml
+++ b/app/src/main/res/layout/fragment_add_game_enter_data.xml
@@ -28,6 +28,16 @@
                 android:layout_weight="2"
                 android:text="@string/Name"
                 android:gravity="center"
+                android:textStyle="bold"
+                android:paddingRight="5dp"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_column="0"
+                android:layout_weight="0.5"
+                android:text="@string/PositionAbbrev"
+                android:gravity="center"
                 android:textStyle="bold" />
 
             <ImageButton
