--- a/app/src/main/res/layout/activity_add_game_enter_data.xml
+++ b/app/src/main/res/layout/activity_add_game_enter_data.xml
@@ -30,7 +30,9 @@
             android:id="@+id/layout_common_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/appbar">
+            android:layout_below="@+id/appbar"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <TextView
                 android:id="@+id/txtScore"
