--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -11,7 +11,24 @@
             android:defaultValue="true"
             android:key="preference_usesnackbar"
             android:title="@string/preference_general_usesnackbar"/>
-
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/preference_category_user_title">
+        <EditTextPreference
+            android:defaultValue="@string/preference_user_username_default"
+            android:key="preference_user_username"
+            android:summary="@string/preference_user_username_summary"
+            android:title="@string/preference_user_username_title"
+            android:inputType="text"/>
+        <EditTextPreference
+            android:defaultValue="@string/preference_user_password_default"
+            android:key="preference_user_password"
+            android:summary="@string/preference_user_password_summary"
+            android:title="@string/preference_user_password_title"
+            android:inputType="textPassword"/>
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="preference_user_autologin"
+            android:title="@string/preference_user_autologin"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/preference_category_webservice">
         <EditTextPreference
