--- a/app/src/main/res/layout/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout/activity_add_game_select_players.xml
@@ -61,13 +61,14 @@
 
         <ScrollView
             android:id="@+id/ScrollView01"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="180dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/table_PlayersHeader"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_above="@+id/linearLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <TableLayout
                 android:id="@+id/table_Players"
@@ -94,7 +95,8 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:id="@+id/linearLayout">
 
             <Button
                 android:id="@+id/btnCancel"
