--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,10 @@
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_mosquito"
             android:title="@string/nav_settings_title" />
+        <item
+            android:id="@+id/nav_test"
+            android:icon="@drawable/ic_mosquito"
+            android:title="test" />
 
         <group
             android:id="@+id/menuGroupAdmin"
