--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
             android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Login" />
+            android:text="@string/btnLogin" />
     </LinearLayout>
 
     <ProgressBar
