--- a/app/src/main/res/layout/activity_team_division2.xml
+++ b/app/src/main/res/layout/activity_team_division2.xml
@@ -10,7 +10,11 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/linearLayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,12 +23,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
                 <view
                     android:id="@+id/listViewBackgroundTeam1"
                     class="pkgAdapter.BackgroundContainer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
@@ -33,7 +41,7 @@
 
                     <ListView
                         android:id="@+id/lvTeam1"
-                        android:layout_width="182dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:visibility="visible" />
 
@@ -43,8 +51,9 @@
                 <view
                     android:id="@+id/listViewBackgroundTeam2"
                     class="pkgAdapter.BackgroundContainer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/tablelayoutred"
@@ -52,8 +61,8 @@
 
                     <ListView
                         android:id="@+id/lvTeam2"
-                        android:layout_width="187dp"
-                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:visibility="visible" />
 
                 </view>
@@ -61,14 +70,16 @@
 
             </LinearLayout>
 
+
+
             <view
                 android:id="@+id/listViewBackgroundAllPlayers"
                 class="pkgAdapter.BackgroundContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:visibility="visible"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:visibility="visible">
+                android:layout_centerHorizontal="true">
                 <!--android:background="@color/white"-->
 
                 <ListView
@@ -76,12 +87,56 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    />
+                    android:layout_centerHorizontal="true" />
 
             </view>
 
         </RelativeLayout>
 
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom">
+
+        <Button
+            android:id="@+id/btnCancel"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="@string/btnCancel" />
+
+        <Button
+            android:id="@+id/btnShufflePos"
+            android:layout_width="0dp"
+            style="@style/buttonStyle"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Shuffle Pos" />
+
+        <Button
+            android:id="@+id/btnShuffle"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="@string/btnShuffle" />
+
+        <Button
+            android:id="@+id/btnContinue"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:text="@string/btnContinue" />
+    </LinearLayout>
 </RelativeLayout>
