--- a/app/src/main/res/layout/swipe_list.xml
+++ b/app/src/main/res/layout/swipe_list.xml
@@ -47,6 +47,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/posOverview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/tablelayoutred"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
