--- a/app/src/main/res/layout/activity_add_game_select_players.xml
+++ b/app/src/main/res/layout/activity_add_game_select_players.xml
@@ -51,7 +51,7 @@
                     android:layout_width="0dp"
                     android:layout_column="0"
                     android:layout_weight="1.1"
-                    android:checked="true"
+                    android:checked="false"
                     android:gravity="center"
                     android:text="@string/Participation"
                     android:textStyle="bold" />
