--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/preference_category_general_title">
+    <PreferenceCategory android:title="@string/preference_category_general_title" android:key="preference_general">
         <ListPreference
             android:entries="@array/language_entries"
             android:entryValues="@array/language_values"
@@ -19,11 +19,4 @@
             android:negativeButtonText="@string/preference_teamassignment_layout_negativeBtn"
             />
     </PreferenceCategory>
-    <!--<PreferenceCategory android:title="Design Color">
-        <com.rarepebble.colorpicker.ColorPreference
-            android:key="colorPicker"
-            android:title="Change the look of the app"
-            android:defaultValue="@color/standardRed"
-            />
-    </PreferenceCategory>-->
 </PreferenceScreen>
